Fix theme title overflowing

--- a/src/pages/Theme/Theme.module.scss
+++ b/src/pages/Theme/Theme.module.scss
@@ -22,8 +22,7 @@
         text-align: center;
         position: relative;
         //right: 2%;
-        left:2%;
-       
+
       }
     p{
         font-size: $font-size-2;
